import widget, extend read.me, add local js-files and config for local or remote files.

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -11,6 +11,7 @@ services:
     CORS\Bundle\FriendlyCaptchaBundle\Form\Type\FriendlyCaptchaType:
         arguments:
             - '%cors.friendly_captcha.sitekey%'
+            - '%cors.friendly_captcha.use_local_script_files%'
             - '%cors.friendly_captcha.endpoint.puzzle%'
         tags:
             - { name: form.type }
