--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -4,6 +4,7 @@ services:
             - '@http_client'
             - '%cors.friendly_captcha.secret%'
             - '%cors.friendly_captcha.sitekey%'
+            - '%cors.friendly_captcha.enabled%'
             - '%cors.friendly_captcha.endpoint.validation%'
         tags:
             - { name: validator.constraint_validator, alias: cors_friendly_captcha_validator }
@@ -11,6 +12,7 @@ services:
     CORS\Bundle\FriendlyCaptchaBundle\Form\Type\FriendlyCaptchaType:
         arguments:
             - '%cors.friendly_captcha.sitekey%'
+            - '%cors.friendly_captcha.enabled%'
             - '%cors.friendly_captcha.use_local_script_files%'
             - '%cors.friendly_captcha.endpoint.puzzle%'
         tags:
